name:                watcher
version:             0.1.0.0
synopsis:            Watches on inofity events and runs command
description:         Please see README.md
homepage:            http://github.com/denibertovic/watcher#readme
license:             BSD3
license-file:        LICENSE
author:              Deni Bertovic
maintainer:          deni@denibertovic.com
copyright:           BSD3
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                    ,  hinotify
                    ,  optparse-applicative
                    ,  turtle
                    ,  text
  default-language:    Haskell2010

executable watcher-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , watcher
                     , optparse-applicative
  default-language:    Haskell2010

test-suite watcher-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , watcher
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/denibertovic/watcher

